--- a/FL12_Webinar_HW3/index.html
+++ b/FL12_Webinar_HW3/index.html
@@ -6,7 +6,8 @@
     <title>Webinar HW3</title>
 </head>
 <body>
-    <script src="./js/game_ES6.js"></script>
-    <script src="./js/inheritance.js"></script>
+    <script src="./js/game_ES5.js"></script>
+    <!-- <script src="./js/game_ES6.js"></script> -->
+    <!-- <script src="./js/inheritance.js"></script> -->
 </body>
 </html>
