--- a/FL12_Webinar_HW3/index.html
+++ b/FL12_Webinar_HW3/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <!-- <script src="./js/game_ES5.js"></script> -->
-    <script src="./js/game_ES6.js"></script>
-    <!-- <script src="./js/inheritance.js"></script> -->
+    <!-- <script src="./js/game_ES6.js"></script> -->
+    <script src="./js/inheritance.js"></script>
 </body>
 </html>
